[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leo-health"
version = "0.1.0"
description = "Your Apple Health and Whoop data, as a SQL database. In 60 seconds."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []  # Zero dependencies for Leo Core

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
leo = "leo_health.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["leo_health*"]
