[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-health"
version = "0.1.0"
description = "Your Apple Health and Whoop data, as a SQL database. In 60 seconds."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
leo       = "leo_health.status:main"
leo-watch = "leo_health.watcher:main"
leo-dash  = "leo_health.dashboard:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["leo_health*"]
